2014-07-14  Russell Harrison  <rharrison@fedoraproject.org> - 0.5.0
    * Add the lokkit::module define to allow for adding and removing iptables modules to the configuration.
    * Fix a missing dependency which might result in the firewall not being updated.

2014-04-23  Russell Harrison  <rharrison@fedoraproject.org> - 0.4.1
    * Handle cases where spaces or characters invalid in file names are provided as the name of the define
    * RDoc documentation clean up
    * Better parameter validation

2014-02-27  Russell Harrison  <rharrison@fedoraproject.org> - 0.4.0
    * Add lokkit::ports_from_ip4 define to simplify the common task of allowing traffic to ports only from specific networks.

2013-09-25  Russell Harrison  <rharrison@fedoraproject.org> - 0.3.0
    * Make sure the firewall is updated if the custom rules file changes.
    * Add an ensure parameter for custom rules.

2013-05-13  Russell Harrison  <rharrison@fedoraproject.org> - 0.2.0
    * Move to absolute qualification of variables and classes to avoid https://projects.puppetlabs.com/issues/17335
    * Rename and reformat CHANGELOG so the Puppet Forge can find and parse it
    * Allow for not clearing the current firewall rules in cases where other tools / modules may also be making updates.

2013-03-19  Russell Harrison  <rharrison@fedoraproject.org> - 0.1.3
    * Also reload the firewall if the previous iptables config doesn't match the current one.

2012-10-30  Russell Harrison  <rharrison@fedoraproject.org> - 0.1.2
    * Set default path for `exec` resources to fix Issue #1

2012-10-10  Russell Harrison  <rharrison@fedoraproject.org> - 0.1.1
    * Fixed bug preventing `http` from being enabled if `https` was already present.

2012-10-09  Russell Harrison  <rharrison@fedoraproject.org> - 0.1.0
    * Fixed bug creating command line when multiple ports are passed in as an array
    * Don't restart `iptables` unless the config has changed