@@ -43,7 +43,7 @@ Only clear the `lokkit` configuration once daily during working hours.
 
 ### lokkit::custom
 
-Define iptables custom rules to apply via `lokkit --custom-rules`
+Define iptables custom rules to apply via `lokkit --custom-rules`. Note: if you have more than one set of custom rules, the rule sets will be loaded in an order corresponding to the name of the set. For example, a custom rule set named 000-input would be applied before a rule set named 999-input-log.
 
 #### Parameters
 
