@@ -1,3 +1,6 @@
+2015-05-05  Joel Smith  <joelsmith@fedoraproject.org> - 0.5.1
+    * sort --custom-rules to guarantee determanistic relative ordering
+
 2014-07-14  Russell Harrison  <rharrison@fedoraproject.org> - 0.5.0
     * Add the lokkit::module define to allow for adding and removing iptables modules to the configuration.
     * Fix a missing dependency which might result in the firewall not being updated.
